<?xml version="1.0"?>
<!--
 This file is part of the ros_webconsole package (https://github.com/rbonghi/ros_webconsole or http://rnext.it).
 Copyright (c) 2019 Raffaello Bonghi.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Affero General Public License for more details.
 
 You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>
-->
<package format="2">
  <name>ros_webconsole</name>
  <version>1.0.0</version>
  <description>ros_webconsole A ROS WEB console to control remotely your robot. Based with robotwebtools.</description>
  <author>Raffaello Bonghi</author>
  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <license>AGPL-3.0</license>
  <url>http://ros.org/wiki/ros_webconsole</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <exec_depend>roswww</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>tf2_web_republisher</exec_depend>

</package>


